--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
 .App {
   padding: 30px;
   display: flex;
+  background-color: rgb(157, 156, 156);
 }
 
 .App>div {
   margin-right: 50px;
   border: 1px solid black;
   padding: 20px;
+  background-color: rgb(247, 106, 106)
 }
 
 .error {
