--- a/src1/App.css
+++ b/src1/App.css
@@ -1,11 +1,14 @@
-
 .App {
   padding: 30px;
   display: flex;
+  background-color: rgb(157, 156, 156);
 }
 
-.App > div {
+.App>div {
   margin-right: 50px;
+  border: 1px solid black;
+  padding: 20px;
+  background-color: rgb(247, 106, 106)
 }
 
 .error {
@@ -23,4 +26,3 @@
 .is-done {
   opacity: 0.5;
 }
-
